fix: tests & remodelation loan